Fix section linking/hiding under nav menu problem
Fix linking directly to a section within a document by id attribute, by using
CSS to insert an invisible blank area just above the item being linked to, so
the actual content shifts below the navigation menu.

--- a/css/accumulo.css
+++ b/css/accumulo.css
@@ -115,3 +115,13 @@ h6:hover .header-link {
   opacity: 1;
 }
 
+/* insert invisible blank space above elements with an id attribute, so that if
+ * they are linked to, the actual content will appear below the nav menu */
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -55px;
+  height: 55px;
+  visibility: hidden;
+}
+
